Fix some spacing and animations

--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ button {
 #delete {
   font-size: 0.75rem;
   padding: 12px 10px;
+  flex-basis: 67px;
 }
 
 .row {
@@ -137,18 +138,15 @@ button {
   90% {
     transform: translate3d(-1px, 0, 0);
   }
-
   20%,
   80% {
     transform: translate3d(2px, 0, 0);
   }
-
   30%,
   50%,
   70% {
     transform: translate3d(-4px, 0, 0);
   }
-
   40%,
   60% {
     transform: translate3d(4px, 0, 0);
